[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-pathfinder"
version = "0.1.0"
description = "Graph-based tool for discovering connection paths and proximity between people in social networks. "
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "RainZoneO2"}
]

[project.urls]
"Repository" = "https://github.com/RainZoneO2/social-pathfinder"

[tool.setuptools.packages.find]
include = ["backend*", "core*"]
where = ["."] 
